2010-07-22
	* src/v5.c(v5_validate_ccache): add, using user-to-user auth with an
	already-present ccache to verify that the KDC that issued the just-
	obtained creds was the same one that issued the previously-obtained
	ones.
	* src/v5.c(v5_validate_keytab): rename from the previous v5_validate
	function.
	* src/v5.c(v5_validate): try to validate using the keytab first, and
	if we don't get a definite answer, maybe try with the default ccache
	* src/v5.c(v5_get_creds): keep track of whether or not validation
	found keys that could be used for validation
	* src/options.c,src/v5.c: make validation using user-to-user logic an
	option, and enable it by default
	* src/v5.c(v5_validate_keytab): split out the server principal
	selection logic into a separate "v5_select_keytab_service" function
	* src/v5.c(v5_validate_keytab): rename to v5_validate_using_keytab,
	using v5_select_keytab_service() to select a service name, or using
	NULL if it fails for whatever reason.
	* src/v5.c(v5_validate_ccache): rename to v5_validate_using_ccache
	* src/v5.c(v5_get_creds): drop logic that cares about whether or not
	we found acceptable keys
	* src/options.c,src/pam_krb5.5.in,src/pam_krb5.8.in: switch to enabling
	validation by default

2010-03-29
	* src/options.c,src/options.h,src/acct.c,src/auth.c: add and heed an
	"ignore_k5login" boolean option.

2010-03-08
	* krb5.spec,configure.ac: 2.3.11

2010-02-24
	* src/v5.c,v5.h: add wrapper functions for reading a cred keyblock as
	a keyblock (v5_creds_get_key) and a ticket's client
	(v5_ticket_get_client), and a wrapper for the set-user-to-user-key
	function (v5_auth_con_setuserkey).
	* src/uuauth.c: use the just-introduced abstractions
	* src/v5.c,v5.h: add wrapper function for krb5_enctype_to_string()

2010-02-12
	* src/minikafs.c: crank up debug verbosity (Chris Wing, #157107)
	* src/kuserok.c(_pam_krb5_kuserok): also set up the user's ccache,
	in case there's a process on the box that expects the user to have