@@ -37,6 +37,9 @@ struct _pam_krb5_options {
 	int debug;
 
 	int addressless;
+#ifdef HAVE_KRB5_ANAME_TO_LOCALNAME
+	int always_allow_localname;
+#endif
 #ifdef HAVE_KRB5_GET_INIT_CREDS_OPT_SET_CANONICALIZE
 	int canonicalize;
 #endif
